function input to change input submit = button

--- a/index4.html
+++ b/index4.html
@@ -9,8 +9,7 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="text" id="one">
-    <input type="submit" value="accpet" onclick="cinemaprice()">
-    <div id="two"></div>
+    <input type="text">
+    <input type="submit" value="accept">
 </body>
 </html>
