function about army you need to go or not

--- a/index4.html
+++ b/index4.html
@@ -9,7 +9,14 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="text">
-    <input type="submit" value="accept">
+    <input type="text"><br>
+    <input type="radio" name="age"> teistas<br>
+    <input type="radio" name="age"> neteistas<br>
+    <input type="submit" value="pateikti" onclick="count()">
+
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
 </body>
 </html>
