while for function

--- a/index4.html
+++ b/index4.html
@@ -9,14 +9,8 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="text"><br>
-    <input type="radio" name="age"> teistas<br>
-    <input type="radio" name="age"> neteistas<br>
-    <input type="submit" value="pateikti" onclick="count()">
+    <input type="number">
+    <input type="submit">
 
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
 </body>
 </html>
