--- a/index4.html
+++ b/index4.html
@@ -9,8 +9,9 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="number">
+    <input type="text" id="x">
+    <!-- <input type="number" id="y"> -->
     <input type="submit">
-
+    <p></p>
 </body>
 </html>
