homework 06.05 about christmas gift and guess loto

--- a/index4.html
+++ b/index4.html
@@ -9,9 +9,8 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="text" id="x">
-    <!-- <input type="number" id="y"> -->
-    <input type="submit">
-    <p></p>
+    <input type="text" id="x" onblur="ab()">
+    <input type="submit" onblur="ab()">
+    <h1></h1>
 </body>
 </html>
