homework about Christmas Gift and Win Loto number 2nd method

--- a/index4.html
+++ b/index4.html
@@ -9,7 +9,7 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="text" id="x" onblur="ab()">
+    <input type="text" placeholder="irasykite savo darbo stazo metus">
     <input type="submit" onblur="ab()">
     <h1></h1>
 </body>
