triangle and pyramid

--- a/index4.html
+++ b/index4.html
@@ -9,8 +9,9 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="text" placeholder="irasykite savo darbo stazo metus">
-    <input type="submit" onblur="ab()">
-    <h1></h1>
+    <input type="submit" id="triangle" value="triangle">
+    <input type="submit" id="piramid">
+    <input type="submit" id="revpiramid">
+    <input type="submit" id="clear"> 
 </body>
 </html>
