pyramid 2nd method

--- a/index4.html
+++ b/index4.html
@@ -10,8 +10,12 @@
 </head>
 <body>
     <input type="submit" id="triangle" value="triangle">
-    <input type="submit" id="piramid">
-    <input type="submit" id="revpiramid">
-    <input type="submit" id="clear"> 
+    <input type="submit" id="piramid" value="pyramid">
+    <input type="submit" id="revpiramid" value="revpyramid">
+    <input type="submit" id="clear">
+    <p></p> 
+    <div class="app"></div> 
+    <p></p> 
+    <p></p> 
 </body>
 </html>
