--- a/index4.html
+++ b/index4.html
@@ -12,10 +12,7 @@
     <input type="submit" id="triangle" value="triangle">
     <input type="submit" id="piramid" value="pyramid">
     <input type="submit" id="revpiramid" value="revpyramid">
-    <input type="submit" id="clear">
-    <p></p> 
+    <input type="submit" id="clear" value="clear">
     <div class="app"></div> 
-    <p></p> 
-    <p></p> 
 </body>
 </html>
