--- a/index4.html
+++ b/index4.html
@@ -9,10 +9,14 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="submit" id="triangle" value="triangle">
+    <!-- <input type="submit" id="triangle" value="triangle">
     <input type="submit" id="piramid" value="pyramid">
     <input type="submit" id="revpiramid" value="revpyramid">
-    <input type="submit" id="clear" value="clear">
-    <div class="app"></div> 
+    <input type="submit" id="clear" value="clear"> -->
+    <div class="ap1"></div> 
+    <div class="ap2"></div> 
+    <div class="ap3"></div> 
+    <div class="ap4"></div> 
+    <div class="ap5"></div> 
 </body>
 </html>
