input represnt for cycle with name and number

--- a/index4.html
+++ b/index4.html
@@ -9,41 +9,8 @@
     <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <!-- <input type="submit"> -->
-    <script>
-        function solution(x) {
-            // i virsus
-            var a = " ";
-            for (let s = 0; s < x / 1.7; s++) {
-    for (let s = 0; s < x * 2; s++) {
-        a += "*";
-    }
-    a += "<br>";
-}
-            for (let s = 0; s <x; s++){
-                for (let s = 0; s < x ; s++){
-                    a += "&nbsp;";
-                    console.log(a);
-                }
-                for (let s = 0; s < x; s++){
-                    a += "*";
-                }
-                a += "<br>";
-            }
-            // i stuburas
-            for (let s = 0; s < x / 1.7; s++) {
-    for (let s = 0; s < x * 2; s++) {
-        a += "*";
-    }
-    a += "<br>";
-}
-
-
-            // apacia i raides
-    
-            return a;  
-        }     
-        document.write(solution(5));
-    </script>
+    <input type="text" id="vardas">
+    <input type="number" id="skc">
+    <input type="submit">
 </body>
 </html>
