--- a/index3.html
+++ b/index3.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Form</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form</title>
+    <link rel="stylesheet" type="text/css" href="includes/normalise.css">
+    <link rel="stylesheet" type="text/css" href="includes/style.css">
+    <script src="includes/script.js" defer></script>
 </head>
 <body>
-    <input type="text" id="temp">
-    <input type="submit" onclick="temperature()">
-    <p id="answer"></p>
-    <script>
-        function temperature(){
-            let num = document.getElementById("temp").value;
-            let guess = document.getElementById("answer");
-            if (num > 0 && num < 100) {
-                guess.innerHTML ="vanduo apacioje";
-            }
-            else if (num > 100) {
-                guess.innerHTML = "gerai";
-            }
-            else {
-                guess.innerHTML = "per zemai";
-            }
-        }    
-    </script>
 </body>
 </html>     
